--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x] 
+        node-version: [22]
 
     steps:
       - name: Checkout Branch
-        uses: actions/checkout@v4.1.2
+        uses: actions/checkout@v4.1.4
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.2
@@ -23,22 +23,21 @@ jobs:
           node-version: ${{ matrix.node-version }}
       
       - name: Extract branch name
-        shell: bash
         run: echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_OUTPUT
         id: extract_branch
 
       - name: Checkout existing bundles
-        uses: actions/checkout@v4.1.2
+        uses: actions/checkout@v4.1.4
         continue-on-error: true
         with:
           ref: gh-pages
           path: bundles
 
-      - run: npm install
+      - run: npm ci
       - run: npm run bundle -- --folder=${{ steps.extract_branch.outputs.branch }}
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4.5.0
+        uses: JamesIves/github-pages-deploy-action@v4.6.0
         with:
           branch: gh-pages
           folder: bundles
