--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kakarot-extensions0.8",
   "version": "0.0.1",
-  "repositoryName": "Kakarot Extensions",
-  "description": "Kakarot Extensions",
+  "repositoryName": "kakarot-extensions0.8",
+  "description": "kakarot-extensions0.8",
   "main": "index.js",
   "scripts": {
     "bundle": "npx paperback bundle",
